Textos rodapé e área de planos/preços

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							</span>
 							<div class="desc">
 								<h3>Dashboard</h3>
-								<p>Acompanhe as principais informações de sua carteira, posições abertas, lucros, prejuízos, taxas e muito mais.</p>
+								<p>Acompanhe as principais informações da sua carteira, posições abertas, lucros, prejuízos, taxas e muito mais.</p>
 							</div>
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 							</span>
 							<div class="desc">
 								<h3>Relatórios</h3>
-								<p>Acesse relatórios de suas operações. Visualize e exporte o histórico de cada operação.</p>
+								<p>Acesse relatórios detalhados de suas operações. Visualize e exporte o histórico de cada operação.</p>
 							</div>
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 							</span>
 							<div class="desc">
 								<h3>Segurança</h3>
-								<p>Opere de forma segura e sem preocupação. Utilizamos o mesmo sistema de tokens utilizados nos bancos.</p>
+								<p>Opere de forma segura através da verificação de duas etapas com o uso do token de segurança.</p>
 							</div>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Robô Long & Short</h2>
+							<h2>Algoritmo Long & Short</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
@@ -238,13 +238,13 @@
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado (risco sistêmico) de sua carteira, ganhando na alta ou baixa do mercado.</p>
+									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco sistêmico de mercado de sua carteira, ganhando na tendência de alta ou baixa.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
-									<p>Opere pelo método quantitativo mais novo do mercado brasileiro, de forma ágil e precisa, através de um controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
+									<p>Opere pelo método quantitativo mais novo do mercado brasileiro, de forma ágil e precisa, através de um controle automático de risco, entradas à mercado com lote completo ou fracionado além de um gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
 							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
@@ -257,17 +257,17 @@
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
-							<h2>Robô Opções por Volatilidade</h2>
+							<h2>Algoritmo Opções por Volatilidade</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>Estruture e execute as melhores estratégias de acordo com o momento de mercado, faça análises de suas operações de forma precisa e segura.</p>
+									<p>Execute as melhores estratégias de acordo com o momento de mercado, faça análises de suas operações de forma precisa e segura.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Analise as gregas das opções dos ativos mais líquidos do mercado, tenha acesso ao histórico de volatilidade implícita de cada ativo. Compare a volatilidade implícita com o Garch, IV Rank e IV Percentil e estruture a melhor estratégia para cada momento de mercado. </p>
+									<p>Analise as gregas das opções dos ativos mais líquidos do mercado, tenha acesso ao histórico de volatilidade implícita de cada ativo. Compare a volatilidade implícita com o Garch, IV Rank e IV Percentil e estruture a melhor cada operação. </p>
 								</div>
 							</div>
 							<div class="features">
@@ -286,23 +286,23 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Robô Juros Futuro (DI)</h2>
+							<h2>Algoritmo Juros Futuro (DI)</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>Long & Short consiste em uma operação simultânea em dois ativos diferentes, na qual o investidor mantêm uma posição vendida em um ativo e comprada no outro no intuito de obter um resíduo financeiro momentâneo entre os dois ativos.</p>
+									<p>Negocie em um dos maiores mercados do mundo com alta liquidez de maneira ágil e sem planilhas.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado de sua carteira, ganhando na alta ou baixa do mercado.</p>
+									<p>Estruture operações de forma segura esperando movimentos nas curvas de juros como os grandes bancos fazem.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
-									<p>Opere pelo método quantitativo mais novo do mercado brasileiro. Opere de forma ágil e precisa com controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
+									<p>Opere diferentes prazos das curvas de juros de maneira intuitiva e fácil! Faça operações de hedge e arbitragem com contratos futuros de DI.</p>
 								</div>
 							</div>
 							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
@@ -367,7 +367,7 @@
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Receba notificações a cada mudança de status das operações abertas. </p>
+									<p>Receba notificações de suas operações abertas a cada mudança de status via email ou através do MT5 móvel. </p>
 								</div>
 							</div>
 							<div class="features">
@@ -388,7 +388,7 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center colorlib-heading animate-box">
 						<h2>Já somos milhares de investidores quantitativos, torne-se um você também!</h2>
-						<p>Inscreva-se em nossa newsletter e fique por dentro das novidades da plataforma.</p>
+						<p>Inscreva-se em nossa newsletter e fique por dentro das novidades da plataforma. Prometemos não incomodar.</p>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -425,34 +425,41 @@
 				<div class="row">
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>per month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="#" class="btn btn-primary">Select Plan</a></p>
+							<h2 class="pricing-heading">Free</h2>
+							<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
+							<p>Delay 30 minutos</p>
+							<p>68 ativos</p>
+							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>per month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="#" class="btn btn-primary">Select Plan</a></p>
+							<h2 class="pricing-heading">Long&Short Cointegração</h2>
+							<div class="price"><sup class="currency">R$</sup>299<small>por mês</small></div>
+							<p>Tempo real</p>
+							<p>68 ativos</p>
+							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Pro</h2>
-							<div class="price"><sup class="currency">$</sup>74<small>per month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="#" class="btn btn-primary">Select Plan</a></p>
+							<h2 class="pricing-heading">Opcões</h2>
+							<div class="price"><sup class="currency">R$</sup>199<small>por mês</small></div>
+							<p>Tempo real</p>
+							<p>15 ativos mais líquidos</p>
+							<p>Execução por Volatilidade</p>
+							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Unlimited</h2>
-							<div class="price"><sup class="currency">$</sup>140<small>per month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="#" class="btn btn-primary">Select Plan</a></p>
+							<h2 class="pricing-heading">Juros Futuro</h2>
+							<div class="price"><sup class="currency">R$</sup>149<small>por mês</small></div>
+							<p>Cálculo do PU.</p>
+							<p>Cálculo do DiV one</p>
+							<p>Simulação de Montecarlo</p>
+							<p>Curva de Juros</p>
+							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 				</div>
@@ -463,66 +470,62 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
-						<h4>About unapp</h4>
-						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<h4>Sobre nós</h4>
+						<p>Somos uma plataforma de tecnologia focada em soluções automatizadas que utilizam algoritmos quantitativos que analisam e processam em tempo real dados do mercado financeiro para gerar informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li><a href="#"><i class="icon-telegram"></i></a></li>
+								<li><a href="#"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
 					<div class="col-md-3 colorlib-widget">
-						<h4>Information</h4>
+						<h4>Páginas</h4>
 						<p>
 							<ul class="colorlib-footer-links">
 								<li><a href="#"><i class="icon-check"></i> Home</a></li>
-								<li><a href="#"><i class="icon-check"></i> Gallery</a></li>
-								<li><a href="#"><i class="icon-check"></i> About</a></li>
-								<li><a href="#"><i class="icon-check"></i> Blog</a></li>
-								<li><a href="#"><i class="icon-check"></i> Contact</a></li>
-								<li><a href="#"><i class="icon-check"></i> Privacy</a></li>
+								<li><a href="#"><i class="icon-check"></i> Robôs</a></li>
+								<li><a href="#"><i class="icon-check"></i> Preços</a></li>
+								<li><a href="#"><i class="icon-check"></i> Contato</a></li>
 							</ul>
 						</p>
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Recent Blog</h4>
+						<h4>Algoritmos</h4>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Photoshoot Technique</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
+								<p class="admin"><span>Lançamento 01/10/19</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Camera Lens Shoot</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
+								<p class="admin"><span>Lançamento 01/01/20</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
+								<p class="admin"><span>Lançamento 02/01/20</span></p>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Contact Info</h4>
+						<h4>Contato</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<li><a href="mailto:contato@youquant.com.br"><i class="icon-envelope"></i> contato@youquant.com.br</a></li>
+							<li><a href="#"><i class="icon-location4"></i> youquant.com.br</a></li>
 						</ul>
 					</div>
 				</div>
@@ -535,7 +538,7 @@
 								 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
-								Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
+								Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a>
 							</p>
 						</div>
 					</div>
