Imagens módulos: Long&Short, Opções, Juros e Acesso pelo Celular

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			<div class="container">
 				<div class="row mobile-wrap">
 					<div class="col-md-5 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-2.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(images/pexels-photo-159888.jpg);"></div>
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
@@ -253,7 +253,7 @@
 				</div>
 				<div class="row mobile-wrap">
 					<div class="col-md-5 col-md-push-7 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-1.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(images/pexels-photo-1073765.jpg);"></div>
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
@@ -282,7 +282,7 @@
 				</div>
 				<div class="row mobile-wrap">
 					<div class="col-md-5 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-2.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(images/pexels-photo-notebook.jpg);"></div>
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
@@ -353,7 +353,7 @@
 			<div class="container">
 				<div class="row mobile-wrap">
 					<div class="col-md-5 col-md-push-7 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-1.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(images/pexels-photo-870903.jpg);"></div>
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
