--- a/algoritmos.html
+++ b/algoritmos.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>YOU QUANT - Long&Short</title>
+	<title>You Quant</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -64,13 +64,15 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Robôs</a>
+									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
+										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
-								<li><a href="contact.html">Contato</a></li>								
+								<li><a href="contact.html">Contato</a></li>
 							</ul>
 						</div>
 					</div>
@@ -85,8 +87,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Long & Short por Cointegração</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Métodos</span></p>
+								<h2>Algoritmos</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Algoritmos</span></p>
 							</div>
 						</div>
 					</div>
@@ -102,7 +104,7 @@
 							<div class="half animate-box">
 								<div class="row no-gutters">
 									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-1.jpg);"></a>
+										<a href="#" class="work-img" style="background-image: url(images/pexels-photo-590022.jpg);"></a>
 									</div>
 								</div>
 							</div>
@@ -111,8 +113,9 @@
 									<div class="col-md-12 col-md-pull-12 no-gutters">
 										<div class="display-t desc">
 											<div class="display-tc">
-												<h2><a href="long_and_short.html">Long & Short por Cointegração</a></h2>
-												<p>No mercado financeiro, existe basicamente duas formas diferentes de se operar Long & Short. A primeira, Long & Short por Correlação, opera-se pela razão de preços entre dois ativos, sejam eles intrasetorias ou ON X PN. Neste métodos calcula-se a razão entre os dois ativos em determinados períodos, calcula-se também a média e desvio padrão desta razão, também chamada de ratio. </p>
+												<h2><a href="long_and_short.html">Long & Short</a></h2>
+												<h3><a href="long_and_short.html">Long & Short por Cointegração</a></h3>
+												<h3><a target="_blank" href="https://www.linkedin.com/pulse/uso-de-filtro-kalman-para-opera%C3%A7%C3%B5es-compra-e-venda-simult%C3%A2nea-ferro/">Long & Short por Filtro de Kalman</a></h3>
 											</div>
 										</div>
 									</div>
@@ -126,7 +129,7 @@
 							<div class="half animate-box">
 								<div class="row no-gutters">
 									<div class="col-md-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-2.jpg);"></a>
+										<a href="#" class="work-img" style="background-image: url(images/pexels-photo-1073765.jpg);"></a>
 									</div>
 								</div>
 							</div>
@@ -135,8 +138,8 @@
 									<div class="col-md-12 no-gutters">
 										<div class="display-t desc">
 											<div class="display-tc">
-												<h2><a href="#">Método 2</a></h2>
-												<p>Even the all-powerfgggul Pointing has no cskjkdsontrol about the blind texts it is an almost unorthographic life</p>
+												<h2><a href="#">Mercado de Opções</a></h2>
+												<h3><a href="opcoes.html">Opções pela Volatilidade</a></h3>
 											</div>
 										</div>
 									</div>
@@ -150,7 +153,7 @@
 							<div class="half animate-box">
 								<div class="row no-gutters">
 									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-3.jpg);"></a>
+										<a href="#" class="work-img" style="background-image: url(images/accounting-banking-calculator-938965.jpg);"></a>
 									</div>
 								</div>
 							</div>
@@ -159,50 +162,14 @@
 									<div class="col-md-12 col-md-pull-12 no-gutters">
 										<div class="display-t desc">
 											<div class="display-tc">
-												<h2><a href="#">A beige chair at a basket</a></h2>
-												<p>Even the all-powerful Pointing has no control about the lkdsjnjdsjdsdsjklsj texts it is an almost unorthographic life</p>
+												<h2><a href="#">Mercado de Juros Futuro</a></h2>
+												<h3><a href="opcoes.html">Juros Futuro (DI)</a></h3>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-4.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">A beige chair at a small white desk</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<ul class="pagination">
-							<li class="disabled"><a href="#">&laquo;</a></li>
-							<li class="active"><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">&raquo;</a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -212,66 +179,65 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
-						<h4>About unapp</h4>
-						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<h4>Sobre nós</h4>
+						<p>Somos uma plataforma de tecnologia focada em soluções automatizadas que utilizam algoritmos
+							quantitativos que analisam e processam em tempo real dados do mercado financeiro para gerar
+							informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li><a href="#"><i class="icon-telegram"></i></a></li>
+								<li><a href="#"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
 					<div class="col-md-3 colorlib-widget">
-						<h4>Information</h4>
+						<h4>Páginas</h4>
 						<p>
 							<ul class="colorlib-footer-links">
 								<li><a href="#"><i class="icon-check"></i> Home</a></li>
-								<li><a href="#"><i class="icon-check"></i> Gallery</a></li>
-								<li><a href="#"><i class="icon-check"></i> About</a></li>
-								<li><a href="#"><i class="icon-check"></i> Blog</a></li>
-								<li><a href="#"><i class="icon-check"></i> Contact</a></li>
-								<li><a href="#"><i class="icon-check"></i> Privacy</a></li>
+								<li><a href="#"><i class="icon-check"></i> Robôs</a></li>
+								<li><a href="#"><i class="icon-check"></i> Preços</a></li>
+								<li><a href="#"><i class="icon-check"></i> Contato</a></li>
 							</ul>
 						</p>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Recent Blog</h4>
+						<h4>Algoritmos</h4>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Photoshoot Technique</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
+								<p class="admin"><span>Lançamento 01/10/19</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Camera Lens Shoot</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
+								<p class="admin"><span>Lançamento 01/01/20</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
+								<p class="admin"><span>Lançamento 02/01/20</span></p>
 							</div>
 						</div>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Contact Info</h4>
+						<h4>Contato</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<li><a href="mailto:contato@youquant.com.br"><i class="icon-envelope"></i>
+									contato@youquant.com.br</a></li>
+							<li><a href="#"><i class="icon-location4"></i> youquant.com.br</a></li>
 						</ul>
 					</div>
 				</div>
@@ -281,10 +247,13 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
-								Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+								is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+									target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br>
+								Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a>
 							</p>
 						</div>
 					</div>
