--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Robôs</a>
+									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
 										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
